--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -28,9 +28,11 @@ jobs:
     - name: Validate Chart Deployed
       run: |
         # Define the command to execute
-        command='kubectl get pods -n test --no-headers -o custom-columns=":metadata.name" | grep "nginx"'
+        timeout=35
+        command='kubectl get pods -n test --no-headers -o custom-columns=":metadata.name"'
+        #command='kubectl get pods -n test --no-headers -o custom-columns=":metadata.name" | grep "nginx"'
         # Run the command until successful execution
-        until $command &> /dev/null; do
+        until $command ; do
           echo "Waiting for pods to be available..."
           sleep 5
         done
