--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -53,15 +53,11 @@ jobs:
         echo "podName: $podName"
         kubectl logs $podName -n test
         sleep 5
-        kubectl describe pod $podName -n test
+        CONTAINER_PORT=`kubectl get pod $podName -n test  -o jsonpath="{.spec.containers[0].ports[0].containerPort}"`
+        echo "CONTAINER_PORT: $CONTAINER_PORT"
         
         POD_HOST=`kubectl get pod $podName -n test --template '{{.status.podIP}}'`
         echo "POD_HOST: $POD_HOST"
-        kubectl describe services -n test 
-        NODE_PORT=`kubectl describe services -n test my-release-nginx-phpfpm-nginx | grep "NodePort:"  | awk '{print $3}'`
-        echo "NODE_PORT: $NODE_PORT"
-        NODE_PORT=${NODE_PORT::-4}
-        echo "NODE_PORT: $NODE_PORT"
         #service/my-release-nginx-phpfpm-nginx 
         #export POD_NAME=$(kubectl get pods --namespace test -l "app.kubernetes.io/name=nginx-phpfpm-nginx,app.kubernetes.io/instance=my-release" -o jsonpath="{.items[0].metadata.name}")
         #export CONTAINER_PORT=$(kubectl get pod --namespace test $POD_NAME -o jsonpath="{.spec.containers[0].ports[0].containerPort}")
