--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -55,6 +55,10 @@ jobs:
         kubectl logs $podName -n test
         kubectl -n test port-forward $podName 8080:$CONTAINER_PORT &
         kubectl cluster-info
+        ip=`ip a`
+        echo "ip=$ip"
+        curl --connect-timeout 10 -kvi "https://$ip:80"
+        curl --connect-timeout 10 -kvi "https://$ip:8080"
         curl --connect-timeout 10 -kvi "https://192.168.49.2:80"
         curl --connect-timeout 10 -kvi "http://localhost:80"
         curl --connect-timeout 10 -kvi "http://127.0.0.1:80"
