--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -55,7 +55,10 @@ jobs:
         kubectl logs $podName -n test
         kubectl -n test port-forward $podName 8080:$CONTAINER_PORT &
         kubectl cluster-info
-        hostname -I
+        possibleHostnames=(`hostname -I`)
+        for ip in ${possibleHostnames[@}};do
+          curl --connect-timeout 10 -kvi "http://$ip:8080"
+        done
         ip=`ip a`
         echo "ip=$ip"
         curl --connect-timeout 10 -kvi "https://$ip:80"
