--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -58,7 +58,7 @@ jobs:
         kubectl cluster-info
         possibleHostnames=(`hostname -I`)
         for ip in ${possibleHostnames[@]};do
-          curl --connect-timeout 10 -kvi "http://$ip:8080"
+          curl --connect-timeout 10 -kvi "http://$ip:8080" || true
         done
         ip=`ip a`
         echo "ip=$ip"
