--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -16,6 +16,7 @@ jobs:
         curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
         sudo install minikube-linux-amd64 /usr/local/bin/minikube
         minikube start 
+        docker ps 
       
           
     - name: Deploy Helm Chart
@@ -56,10 +57,12 @@ jobs:
         kubectl logs $podName -n test
         kubectl -n test port-forward $podName 8080:$CONTAINER_PORT &
         kubectl cluster-info
+        #docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' container_name_or_id
         possibleHostnames=(`hostname -I`)
         for ip in ${possibleHostnames[@]};do
           curl --connect-timeout 10 -kvi "http://$ip:8080" || true
         done
+         172.17.0.1
         ip=`ip a`
         echo "ip=$ip"
         curl --connect-timeout 10 -kvi "https://$ip:80"
