--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -36,7 +36,7 @@ jobs:
         kubectl logs $podName -n test
         kubectl -n test port-forward $podName 8080:$CONTAINER_PORT &
         kubectl cluster-info
-        docker exec -d minikube curl --connect-timeout 10 -kvi "http://127.0.0.1:8080"
+        docker exec -it minikube curl --connect-timeout 10 -kvi "http://127.0.0.1:8080"
  
         docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' minikube
         possibleHostnames=(`hostname -I`)
