--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -16,7 +16,7 @@ jobs:
         curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
         sudo install minikube-linux-amd64 /usr/local/bin/minikube
         minikube start 
-      
+        docker exec -t minikube curl --connect-timeout 10 -kvi "http://127.0.0.1:8080"
     - name: Deploy Helm Chart
       run: |
         helm repo add sickhub https://sickhub.github.io/charts
