--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Validate Chart Deployed
       run: |
-        sleep 30    
+        sleep 35    
         podName=`kubectl get pods -n test --no-headers -o custom-columns=":metadata.name" | grep "phpfpm-nginx"`
         echo "podName: $podName"
         CONTAINER_PORT=`kubectl get pod $podName -n test  -o jsonpath="{.spec.containers[0].ports[0].containerPort}"`
@@ -37,7 +37,7 @@ jobs:
         POD_HOST=`kubectl get pod -n test $podName --template '{{.status.podIP}}'`
         NODE_PORT=`kubectl describe services -n test my-release-nginx-phpfpm-nginx | grep "NodePort:"  | awk '{print $3}'`
         NODE_PORT=${NODE_PORT::-4}
-        curl --connect-timeout 10 -kvi "http://192.168.49.2:8080" ||true
+        curl --connect-timeout 10 -kvi "http://192.168.49.2:$NODE_PORT" ||true
         
   deploy-application:
     timeout-minutes: 10
