--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -33,7 +33,7 @@ jobs:
         #echo "CONTAINER_PORT: $CONTAINER_PORT"
         
         kubectl logs $podName -n test
-        kubectl get deploments -n test
+        kubectl get deployments -n test
         kubectl expose deployment my-release-nginx-phpfpm-nginx --type=NodePort --name=my-release-nginx-phpfpm-nginx
         POD_HOST=`kubectl get pod -n test $podName --template '{{.status.podIP}}'`
         NODE_PORT=`kubectl describe services -n test my-release-nginx-phpfpm-nginx | grep "NodePort:"  | awk '{print $3}'`
