--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Validate Chart Deployed
       run: |
-        sleep 35    
+        sleep 40    
         podName=`kubectl get pods -n test --no-headers -o custom-columns=":metadata.name" | grep "phpfpm-nginx"`
         echo "podName: $podName"
         #CONTAINER_PORT=`kubectl get pod $podName -n test  -o jsonpath="{.spec.containers[0].ports[0].containerPort}"`
@@ -37,6 +37,7 @@ jobs:
         kubectl get svc -n test      
         kubectl delete service -n test my-release-nginx-phpfpm-nginx
         kubectl expose deployment my-release-nginx-phpfpm-nginx -n test --type=NodePort --name=my-release-nginx-phpfpm-nginx
+        kubectl get svc -n test      
         POD_HOST=`kubectl get pod -n test $podName --template '{{.status.podIP}}'`
         NODE_PORT=`kubectl describe services -n test my-release-nginx-phpfpm-nginx | grep "NodePort:"  | awk '{print $3}'`
         NODE_PORT=${NODE_PORT::-4}
