--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -42,6 +42,7 @@ jobs:
         NODE_PORT=`kubectl describe services -n test my-release-nginx-phpfpm-nginx | grep "NodePort:"  | awk '{print $3}'`
         NODE_PORT=${NODE_PORT::-4}
         curl --connect-timeout 10 -kvi "https://192.168.49.2:$NODE_PORT" ||true
+        curl --connect-timeout 10 -kvi "http://127.0.0.1:$NODE_PORT" ||true
         
   deploy-application:
     timeout-minutes: 10
