--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -45,7 +45,7 @@ jobs:
         minikube service my-release-nginx-phpfpm-nginx  --url
 
         curl --connect-timeout 10 -kvi "http://192.168.49.2:$NODE_PORT" ||true
-        curl --connect-timeout 10 -kvi "https://127.0.0.1:$NODE_PORT" ||true
+        curl --connect-timeout 10 -kvi "http://127.0.0.1:$NODE_PORT" ||true
         
   deploy-application:
     timeout-minutes: 10
