--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -42,7 +42,8 @@ jobs:
         NODE_PORT=`kubectl describe services -n test my-release-nginx-phpfpm-nginx | grep "NodePort:"  | awk '{print $3}'`
         NODE_PORT=${NODE_PORT::-4}
         kubectl cluster-info
-        minikube service my-release-nginx-phpfpm-nginx  --url
+        minikube service my-release-nginx-phpfpm-nginx -n test --url
+        ps -ef | grep docker@127.0.0.1
 
         curl --connect-timeout 10 -kvi "http://192.168.49.2:$NODE_PORT" ||true
         curl --connect-timeout 10 -kvi "http://127.0.0.1:$NODE_PORT" ||true
