--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -33,7 +33,7 @@ jobs:
         kubectl get deployments -n test
         kubectl get svc -n test      
         kubectl delete service -n test my-release-nginx-phpfpm-nginx
-        kubectl expose deployment my-release-nginx-phpfpm-nginx -n test --type=NodePort --name=my-release-nginx-phpfpm-nginx
+        kubectl expose deployment my-release-nginx-phpfpm-nginx -n test --type=NodePort --name=nginx-phpfpm-node-port
         kubectl get svc -n test      
         podName=`kubectl get pods -n test --no-headers -o custom-columns=":metadata.name" | grep "phpfpm-nginx"`
         echo "podName: $podName"
@@ -42,7 +42,7 @@ jobs:
         NODE_PORT=`kubectl describe services -n test my-release-nginx-phpfpm-nginx | grep "NodePort:"  | awk '{print $3}'`
         NODE_PORT=${NODE_PORT::-4}
         kubectl cluster-info
-        minikube service my-release-nginx-phpfpm-nginx -n test --url
+        minikube service nginx-phpfpm-node-port -n test --url
         curl --connect-timeout 10 -kvi "http://192.168.49.2:$NODE_PORT" ||true
         curl --connect-timeout 10 -kvi "http://127.0.0.1:$NODE_PORT" ||true
         
