--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -42,7 +42,7 @@ jobs:
         NODE_PORT=`kubectl describe services -n test nginx-phpfpm-node-port | grep "NodePort:"  | awk '{print $3}'`
         NODE_PORT=${NODE_PORT::-4}
         kubectl cluster-info
-        #minikube service nginx-phpfpm-node-port -n test --url
+        minikube service nginx-phpfpm-node-port -n test --url
         curl --connect-timeout 10 -vi "http://192.168.49.2:$NODE_PORT"
  
         
