--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -43,6 +43,10 @@ jobs:
         NODE_PORT=${NODE_PORT::-4}
         kubectl cluster-info
         minikube service nginx-phpfpm-node-port -n test --url
+        SCRIPT_NAME=/status \
+        SCRIPT_FILENAME=/status \
+        REQUEST_METHOD=GET \
+        cgi-fcgi -bind -connect "http://192.168.49.2:$NODE_PORT"
         curl --connect-timeout 10 -vi "http://192.168.49.2:$NODE_PORT"
  
         
