--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -48,7 +48,7 @@ jobs:
         SCRIPT_FILENAME=/status \
         REQUEST_METHOD=GET \
         cgi-fcgi -bind -connect "https://192.168.49.2:$NODE_PORT" || true
-        curl --connect-timeout 10 -vki "https://192.168.49.2:$NODE_PORT" || true
+        curl --connect-timeout 10 -vki "http://192.168.49.2:$NODE_PORT" || true
  
         
   deploy-application:
