--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -44,6 +44,7 @@ jobs:
         kubectl cluster-info
         minikube service nginx-phpfpm-node-port -n test --url
         sleep 5
+        kubectl exec -t $podName -n test chown -R www-data:www-data /var/www/html/
         SCRIPT_NAME=/status \
         SCRIPT_FILENAME=/status \
         REQUEST_METHOD=GET \
