--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -26,7 +26,8 @@ jobs:
 
     - name: Test PHP
       run: |        
-        curl http://localhost:8080/index.php
+        ip=`docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' nginx-php-fpm`
+        curl "http://$ip:8080/index.php"
 
     - name: Push Docker Image
       run: |
