--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Test PHP
       run: |        
         ip=`docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' nginx-php-fpm`
+        echo "ip=$ip"
         curl "http://$ip:8080/index.php"
 
     - name: Push Docker Image
