--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Test PHP
       run: |   
         docker logs nginx-php-fpm
-        docker ps 
+        docker ps -a
         docker inspect \
         --format '{{ .NetworkSettings.IPAddress }}' nginx-php-fpm
         
