--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -13,8 +13,8 @@ jobs:
     
       - name: Run Script
         run: |
-          fileOne=https://raw.githubusercontent.com/BoazHalter/RevealSecurity/main/.github/workflows/CI-CD.yml
-          fileTwo=https://github.com/BoazHalter/RevealSecurity/blob/dockerfile/.github/workflows/CI-CD.yml
+          fileOne="https://raw.githubusercontent.com/BoazHalter/RevealSecurity/main/.github/workflows/CI-CD.yml"
+          fileTwo="https://github.com/BoazHalter/RevealSecurity/blob/dockerfile/.github/workflows/CI-CD.yml"
           run.sh merge $fileOne $fileTwo
           run.sh uniq $fileOne $fileTwo
           run.sh common $fileOne $fileTwo
