--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           fileOne="https://raw.githubusercontent.com/BoazHalter/RevealSecurity/main/.github/workflows/CI-CD.yml"
           fileTwo="https://github.com/BoazHalter/RevealSecurity/blob/dockerfile/.github/workflows/CI-CD.yml"
-          run.sh merge $fileOne $fileTwo
-          run.sh uniq $fileOne $fileTwo
-          run.sh common $fileOne $fileTwo
-          run.sh sort $fileOne $fileTwo
+          bash run.sh merge $fileOne $fileTwo
+          bash run.sh uniq $fileOne $fileTwo
+          bash run.sh common $fileOne $fileTwo
+          bash run.sh sort $fileOne $fileTwo
