--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - "scripts"
 jobs:
-  docker:
+  scripts-ci-job:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -15,7 +15,7 @@ jobs:
         run: |
           fileOne="https://raw.githubusercontent.com/BoazHalter/RevealSecurity/main/.github/workflows/CI-CD.yml"
           fileTwo="https://raw.githubusercontent.com/BoazHalter/RevealSecurity/dockerfile/.github/workflows/CI-CD.yml"
-          bash scripts/run.sh merge $fileOne $fileTwo
-          bash scripts/run.sh uniq $fileOne $fileTwo
+          bash /scripts/run.sh merge $fileOne $fileTwo
+          bash /scripts/run.sh uniq $fileOne $fileTwo
           bash scripts/run.sh common $fileOne $fileTwo
           bash scripts/run.sh sort $fileOne $fileTwo
