--- a/.github/workflows/scripts.yml
+++ b/.github/workflows/scripts.yml
@@ -16,7 +16,7 @@ jobs:
           cd scripts
           fileOne="https://raw.githubusercontent.com/BoazHalter/RevealSecurity/main/.github/workflows/CI-CD.yml"
           fileTwo="https://raw.githubusercontent.com/BoazHalter/RevealSecurity/dockerfile/.github/workflows/CI-CD.yml"
-          bash run.sh merge $fileOne $fileTwo
-          bash run.sh uniq $fileOne $fileTwo
-          bash run.sh common $fileOne $fileTwo
-          bash run.sh sort $fileOne $fileTwo
+          bash run-yq.sh merge $fileOne $fileTwo
+          bash run-yq.sh uniq $fileOne $fileTwo
+          bash run-yq.sh common $fileOne $fileTwo
+          bash run-yq.sh sort $fileOne $fileTwo
